--- a/pressing/new/index.html
+++ b/pressing/new/index.html
@@ -1243,7 +1243,7 @@ function updateChallenge(){
 }
 function updateAuto(){
     if (autobuy==1 && challenge!==3 && challenge!==4 && challenge!==5){
-    if (presses>=(Math.trunc(calc1)) && challenge!==2){
+    if (presses>=(Math.trunc(calcc1)) && challenge!==2){
     buyTenCursors()
     }
     if (presses>=(Math.trunc(calcc2)) && challenge!==2){
