--- a/pressing/new/index.html
+++ b/pressing/new/index.html
@@ -2434,7 +2434,7 @@ function buttonpress(){
         } else if (dimension==1){
             antipresses+=(((antistrength*0.25)+1)*(Math.pow(2, goals6)));
             totalantipresses+=(((antistrength*0.25)+1)*(Math.pow(2, goals6)));
-            axppts+=(((antistrength*0.25)+1))*axpmul)
+            axppts+=(((antistrength*0.25)+1)*axpmul)
         }
     }
 }
