--- a/pressing/new/index.html
+++ b/pressing/new/index.html
@@ -3096,10 +3096,10 @@ function loadCookie(){
         ascXP = saveLoading.ascXP;
         asccost0 = saveLoading.asccost0;
         planets = saveLoading.planets;
-        antistrength = pressingSave.antistrength;
-        anticost0 = pressingSave.anticost0;
-        antixp = pressingSave.antixp;
-        anticost1 = pressingSave.anticost1;
+        antistrength = saveLoading.antistrength;
+        anticost0 = saveLoading.anticost0;
+        antixp = saveLoading.antixp;
+        anticost1 = saveLoading.anticost1;
         if (detailedoutput==1){
         console.log(saveLoading)
         }
