if you do prestige speedrun and do it quick... multicomplete!!

--- a/pressing/new/index.html
+++ b/pressing/new/index.html
@@ -3724,7 +3724,57 @@ function prestige(){
 lastprestige=Date.now()
 prestigeamt+=1
 if (challenge==4){
+if ((failtimer-(Date.now()))>=0 && (failtimer-(Date.now()))<150000){
 goals4+=1
+} else if ((failtimer-(Date.now()))>=150000 && (failtimer-(Date.now()))<300000){
+goals4+=2
+} else if ((failtimer-(Date.now()))>=300000 && (failtimer-(Date.now()))<450000){
+goals4+=3
+} else if ((failtimer-(Date.now()))>=450000 && (failtimer-(Date.now()))<600000){
+goals4+=4
+} else if ((failtimer-(Date.now()))>=600000 && (failtimer-(Date.now()))<750000){
+goals4+=5
+} else if ((failtimer-(Date.now()))>=750000 && (failtimer-(Date.now()))<900000){
+goals4+=6
+} else if ((failtimer-(Date.now()))>=900000 && (failtimer-(Date.now()))<1050000){
+goals4+=7
+} else if ((failtimer-(Date.now()))>=1050000 && (failtimer-(Date.now()))<1200000){
+goals4+=8
+} else if ((failtimer-(Date.now()))>=1200000 && (failtimer-(Date.now()))<1350000){
+goals4+=9
+} else if ((failtimer-(Date.now()))>=1350000 && (failtimer-(Date.now()))<1500000){
+goals4+=10
+} else if ((failtimer-(Date.now()))>=1500000 && (failtimer-(Date.now()))<1650000){
+goals4+=11
+} else if ((failtimer-(Date.now()))>=1650000 && (failtimer-(Date.now()))<1800000){
+goals4+=12
+} else if ((failtimer-(Date.now()))>=1800000 && (failtimer-(Date.now()))<1950000){
+goals4+=13
+} else if ((failtimer-(Date.now()))>=1950000 && (failtimer-(Date.now()))<2900000){
+goals4+=14
+} else if ((failtimer-(Date.now()))>=2100000 && (failtimer-(Date.now()))<2050000){
+goals4+=15
+} else if ((failtimer-(Date.now()))>=2250000 && (failtimer-(Date.now()))<2400000){
+goals4+=16
+} else if ((failtimer-(Date.now()))>=2400000 && (failtimer-(Date.now()))<2550000){
+goals4+=17
+} else if ((failtimer-(Date.now()))>=2550000 && (failtimer-(Date.now()))<2700000){
+goals4+=18
+} else if ((failtimer-(Date.now()))>=2700000 && (failtimer-(Date.now()))<2850000){
+goals4+=19
+} else if ((failtimer-(Date.now()))>=2850000 && (failtimer-(Date.now()))<3000000){
+goals4+=20
+} else if ((failtimer-(Date.now()))>=3000000 && (failtimer-(Date.now()))<3150000){
+goals4+=21
+} else if ((failtimer-(Date.now()))>=3150000 && (failtimer-(Date.now()))<3300000){
+goals4+=22
+} else if ((failtimer-(Date.now()))>=3300000 && (failtimer-(Date.now()))<3450000){
+goals4+=23
+} else if ((failtimer-(Date.now()))>=3450000 && (failtimer-(Date.now()))<3600000){
+goals4+=24
+} else if ((failtimer-(Date.now()))>=3600000 && (failtimer-(Date.now()))<=3750000){
+goals4+=25
+}
 challenge=0
 }
 ppoint+=(mpgain*(1+(goals4*0.25)))
@@ -3778,7 +3828,57 @@ function ascend(){
 lastascend=Date.now()
 ascendamt+=1
 if (challenge==4){
+if ((failtimer-(Date.now()))>=0 && (failtimer-(Date.now()))<150000){
 goals4+=1
+} else if ((failtimer-(Date.now()))>=150000 && (failtimer-(Date.now()))<300000){
+goals4+=2
+} else if ((failtimer-(Date.now()))>=300000 && (failtimer-(Date.now()))<450000){
+goals4+=3
+} else if ((failtimer-(Date.now()))>=450000 && (failtimer-(Date.now()))<600000){
+goals4+=4
+} else if ((failtimer-(Date.now()))>=600000 && (failtimer-(Date.now()))<750000){
+goals4+=5
+} else if ((failtimer-(Date.now()))>=750000 && (failtimer-(Date.now()))<900000){
+goals4+=6
+} else if ((failtimer-(Date.now()))>=900000 && (failtimer-(Date.now()))<1050000){
+goals4+=7
+} else if ((failtimer-(Date.now()))>=1050000 && (failtimer-(Date.now()))<1200000){
+goals4+=8
+} else if ((failtimer-(Date.now()))>=1200000 && (failtimer-(Date.now()))<1350000){
+goals4+=9
+} else if ((failtimer-(Date.now()))>=1350000 && (failtimer-(Date.now()))<1500000){
+goals4+=10
+} else if ((failtimer-(Date.now()))>=1500000 && (failtimer-(Date.now()))<1650000){
+goals4+=11
+} else if ((failtimer-(Date.now()))>=1650000 && (failtimer-(Date.now()))<1800000){
+goals4+=12
+} else if ((failtimer-(Date.now()))>=1800000 && (failtimer-(Date.now()))<1950000){
+goals4+=13
+} else if ((failtimer-(Date.now()))>=1950000 && (failtimer-(Date.now()))<2900000){
+goals4+=14
+} else if ((failtimer-(Date.now()))>=2100000 && (failtimer-(Date.now()))<2050000){
+goals4+=15
+} else if ((failtimer-(Date.now()))>=2250000 && (failtimer-(Date.now()))<2400000){
+goals4+=16
+} else if ((failtimer-(Date.now()))>=2400000 && (failtimer-(Date.now()))<2550000){
+goals4+=17
+} else if ((failtimer-(Date.now()))>=2550000 && (failtimer-(Date.now()))<2700000){
+goals4+=18
+} else if ((failtimer-(Date.now()))>=2700000 && (failtimer-(Date.now()))<2850000){
+goals4+=19
+} else if ((failtimer-(Date.now()))>=2850000 && (failtimer-(Date.now()))<3000000){
+goals4+=20
+} else if ((failtimer-(Date.now()))>=3000000 && (failtimer-(Date.now()))<3150000){
+goals4+=21
+} else if ((failtimer-(Date.now()))>=3150000 && (failtimer-(Date.now()))<3300000){
+goals4+=22
+} else if ((failtimer-(Date.now()))>=3300000 && (failtimer-(Date.now()))<3450000){
+goals4+=23
+} else if ((failtimer-(Date.now()))>=3450000 && (failtimer-(Date.now()))<3600000){
+goals4+=24
+} else if ((failtimer-(Date.now()))>=3600000 && (failtimer-(Date.now()))<=3750000){
+goals4+=25
+}
 challenge=0
 }
 ppoint=0
