prestige points gain is shortened (anonymity and ascend is next)

--- a/pressing/new/index.html
+++ b/pressing/new/index.html
@@ -1281,8 +1281,50 @@ function updateResets(){
     document.getElementById("presinfo").innerText="You lose everything, but prestige!"
     if (((mpgain*(1+(goals4*0.25)))*prespwr)==1){
     document.getElementById("prestigegain").innerText=" You will gain "+((mpgain*(1+(goals4*0.25)))*prespwr)+" Prestige Point."
-    } else {
+    } else if (((mpgain*(1+(goals4*0.25)))*prespwr)>=0 && ((mpgain*(1+(goals4*0.25)))*prespwr)<1000){
     document.getElementById("prestigegain").innerText=" You will gain "+((mpgain*(1+(goals4*0.25)))*prespwr)+" Prestige Points."
+    } else if (((mpgain*(1+(goals4*0.25)))*prespwr)>=1000 && ((mpgain*(1+(goals4*0.25)))*prespwr)<1000000){
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)/1000)))+"k Prestige Points."
+    } else if (((mpgain*(1+(goals4*0.25)))*prespwr)>=1000000 && ((mpgain*(1+(goals4*0.25)))*prespwr)<1000000000){
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)/1000000)))+"M Prestige Points."
+    } else if (((mpgain*(1+(goals4*0.25)))*prespwr)>=1000000000 && ((mpgain*(1+(goals4*0.25)))*prespwr)<1000000000000){
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)/1000000000)))+"B Prestige Points."
+    } else if (((mpgain*(1+(goals4*0.25)))*prespwr)>=1000000000000 && ((mpgain*(1+(goals4*0.25)))*prespwr)<1000000000000000){
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)/1000000000000)))+"T Prestige Points."
+    } else if (((mpgain*(1+(goals4*0.25)))*prespwr)>=1000000000000000 && ((mpgain*(1+(goals4*0.25)))*prespwr)<1000000000000000000){
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)/1000000000000000)))+"Qa Prestige Points."
+    } else if (((mpgain*(1+(goals4*0.25)))*prespwr)>=1000000000000000000 && ((mpgain*(1+(goals4*0.25)))*prespwr)<1000000000000000000000){
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)/1000000000000000000)))+"Qi Prestige Points."
+    } else if (((mpgain*(1+(goals4*0.25)))*prespwr)>=1000000000000000000000 && ((mpgain*(1+(goals4*0.25)))*prespwr)<1000000000000000000000000){
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)/1000000000000000000000)))+"Sx Prestige Points."
+    } else if (((mpgain*(1+(goals4*0.25)))*prespwr)>=1000000000000000000000000 && ((mpgain*(1+(goals4*0.25)))*prespwr)<1000000000000000000000000000){
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)/1000000000000000000000000)))+"Sp Prestige Points."
+    } else if (((mpgain*(1+(goals4*0.25)))*prespwr)>=1000000000000000000000000000 && ((mpgain*(1+(goals4*0.25)))*prespwr)<1000000000000000000000000000000){
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)/1000000000000000000000000000)))+"Oc Prestige Points."
+    } else if (((mpgain*(1+(goals4*0.25)))*prespwr)>=1000000000000000000000000000000 && ((mpgain*(1+(goals4*0.25)))*prespwr)<1000000000000000000000000000000000){
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)/1000000000000000000000000000000)))+"No Prestige Points."
+    } else if (((mpgain*(1+(goals4*0.25)))*prespwr)>=1000000000000000000000000000000000 && ((mpgain*(1+(goals4*0.25)))*prespwr)<1000000000000000000000000000000000000){
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)/1000000000000000000000000000000000)))+"Dc Prestige Points."
+    } else if (((mpgain*(1+(goals4*0.25)))*prespwr)>=1000000000000000000000000000000000000 && ((mpgain*(1+(goals4*0.25)))*prespwr)<1000000000000000000000000000000000000000){
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)/1000000000000000000000000000000000000)))+"UDc Prestige Points."
+    } else if (((mpgain*(1+(goals4*0.25)))*prespwr)>=1000000000000000000000000000000000000000 && ((mpgain*(1+(goals4*0.25)))*prespwr)<1000000000000000000000000000000000000000000){
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)/1000000000000000000000000000000000000000)))+"DDc Prestige Points."
+    } else if (((mpgain*(1+(goals4*0.25)))*prespwr)>=1000000000000000000000000000000000000000000 && ((mpgain*(1+(goals4*0.25)))*prespwr)<1000000000000000000000000000000000000000000000){
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)/1000000000000000000000000000000000000000000)))+"TDc Prestige Points."
+    } else if (((mpgain*(1+(goals4*0.25)))*prespwr)>=1000000000000000000000000000000000000000000000 && ((mpgain*(1+(goals4*0.25)))*prespwr)<1000000000000000000000000000000000000000000000000){
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)/1000000000000000000000000000000000000000000000)))+"QaDc Prestige Points."
+    } else if (((mpgain*(1+(goals4*0.25)))*prespwr)>=1000000000000000000000000000000000000000000000000 && ((mpgain*(1+(goals4*0.25)))*prespwr)<1000000000000000000000000000000000000000000000000000){
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)/1000000000000000000000000000000000000000000000000)))+"QiDc Prestige Points."
+    } else if (((mpgain*(1+(goals4*0.25)))*prespwr)>=1000000000000000000000000000000000000000000000000000 && ((mpgain*(1+(goals4*0.25)))*prespwr)<1000000000000000000000000000000000000000000000000000000){
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)/1000000000000000000000000000000000000000000000000000)))+"SxDc Prestige Points."
+    } else if (((mpgain*(1+(goals4*0.25)))*prespwr)>=1000000000000000000000000000000000000000000000000000000 && ((mpgain*(1+(goals4*0.25)))*prespwr)<1000000000000000000000000000000000000000000000000000000000){
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)/1000000000000000000000000000000000000000000000000000000)))+"SpDc Prestige Points."
+    } else if (((mpgain*(1+(goals4*0.25)))*prespwr)>=1000000000000000000000000000000000000000000000000000000000 && ((mpgain*(1+(goals4*0.25)))*prespwr)<1000000000000000000000000000000000000000000000000000000000000){
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)/1000000000000000000000000000000000000000000000000000000000)))+"OcDc Prestige Points."
+    } else if (((mpgain*(1+(goals4*0.25)))*prespwr)>=1000000000000000000000000000000000000000000000000000000000000 && ((mpgain*(1+(goals4*0.25)))*prespwr)<1000000000000000000000000000000000000000000000000000000000000000){
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)/1000000000000000000000000000000000000000000000000000000000000)))+"NoDc Prestige Points."
+    } else if (((mpgain*(1+(goals4*0.25)))*prespwr)>=1000000000000000000000000000000000000000000000000000000000000000 && ((mpgain*(1+(goals4*0.25)))*prespwr)<1000000000000000000000000000000000000000000000000000000000000000000){
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)/1000000000000000000000000000000000000000000000000000000000000000)))+"Vg Prestige Points."
     }
     document.getElementById("prestige").disabled=false
     document.getElementById("prestigeshop").innerText="Prestige shop"
